Fixed font on firefox

--- a/resources/sass/core/reset.scss
+++ b/resources/sass/core/reset.scss
@@ -8,7 +8,9 @@ body {
   font-size: $font-size-base;
   color: $text-color;
   background-color: transparent;
+  font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   line-height: $line-height-base;
 }
 
